--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ hr{
    background-color: rgb(171,205,239);
 }
 
- 
+ .bullelements{
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.582);
+
+ }
 
  
   .topnav{
